--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,10 +1,10 @@
 FROM php:8.0.2-fpm
 
-# Arguments defined in docker-compose.yml
+# Arguments I defined in docker-compose.yml file
 ARG user
 ARG uid
 
-# Install system dependencies
+# Install necessary system dependencies for the application
 RUN apt-get update && apt-get install -y \
     git \
     curl \
@@ -20,15 +20,15 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
-# Get latest Composer
+# Composer installation, set to latest version
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Create system user to run Composer and Artisan Commands
+#  Composer for system user alongside php artisan commands
 RUN useradd -G www-data,root -u $uid -d /home/$user $user
 RUN mkdir -p /home/$user/.composer && \
     chown -R $user:$user /home/$user
 
-# Set working directory
+# Working Directory
 WORKDIR /var/www
 
 USER $user
